sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: identifier expected but integer literal found.
		if ( plusPetit(i, j:i+1) {
                                      ^AlgBubbleSort1:12: error: ')' expected but '}' found.
		}
                ^